# rv-mini-os

./: .gitignore  LICENSE  Makefile  README.md  dl.py
app/: app_Config.in  example_Config.in
app/hello/: .gitignore  configure.ac  hello_autotools.rvmk  hello_configure_make.rvmk  hello_makefile.rvmk
app/hello_rv/: CMakeLists.txt  Config.in  hello_rv.rvmk
app/hello_rv/src/: CMakeLists.txt  hello_rv.c  hello_rv_smile.c
app/hello_rv/src/include/: hello_rv.h
board/: .gitignore  Config.in
board/rk1808/board_defconfigs/: rk1808-evb-linux_defconfig
board/rk1808/buildroot_config/: busybox.config
board/rk3326/board_defconfigs/: rk3326-evb-linux_defconfig
board/rv1108/: Config.in  user_partition.ini
board/rv1108/board_defconfigs/: rv1108-minievb-v10_defconfig
board/rv1108/buildroot_config/: busybox.config  uClibc-ng.config
board/rv1108/init.d/: S00debug.sh  S00rv1108_init.sh
buildroot/: .gitignore  Config.in  buildroot.rvmk  dl.ini  dl.md
buildroot/patch/: dl
doc/: Developer_Guides.html  template.css  开发指南.html
internal_doc/: Developer_Guides.md  footer.html  md2html.bash  开发指南.md
internal_doc/zh-cn/: compile_zh-cn.md  copyright_zh-cn.md  develop_prepare_zh-cn.md
kernel/: Config.in  dl.ini  kernel.rvmk
platform/: Config.in
platform/hal/: Config.in  hal.rvmk
platform/hal/mpp/: .gitignore  Config.in  dl.ini  mpp.rvmk
rkbin/: .gitignore  dl.ini
toolchain/gcc_linux-x86_aarch64/: dl.ini
toolchain/gcc_linux-x86_arm/: .gitignore  dl.ini
u-boot/: Config.in  dl.ini  prebuilts  rkbin  uboot.rvmk
vendor_tool/rockchip/: .gitignore  dl.ini
(+9 files in other folders)
